<resources>
    <string name="app_name">Hangman</string>
    <string name="title">Hangman</string>
    <string name="action_new_game">New Game</string>
    <string name="action_how_to_play">How to Play</string>
    <string name="action_acknowledgements">Acknowledgements</string>
    <string name="start_button_text">Start</string>
    <string name="title_activity_game">Hangman Game</string>
    <string name="image_description">hangman state img</string>
    <string name="guessed_title">Guessed letters:</string>
    <string name="guess_hint">Guess a letter</string>
    <string name="user_input">Placeholder</string>
    <string name="guess_button">Guess</string>
    <string name="guessed_letters"></string>
    <string name="htp"> The question marks display the number of unknown characters
                        in the word you will have to guess. To guess a letter, enter a letter in
                        the \'Guess a letter\' field and press the \'Guess\'-button. If the word does not contain
                        that letter, a part of your hangman will be drawn. When all (6) components are drawn,
                        you lose. When you enter a letter that is present in the word, the corresponding characters
                        will be revealed in the word. If you reveal all characters, you have guessed the word and won the game.
                        \n\nGood luck!
                    </string>
    <string name="duplicate_guesses">You already guessed that character</string>
    <string name="wrong_input">Please enter a lowercase letter</string>
</resources>