<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.michielbowijk.hangman.GameActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/guessed_title"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guessed_letters"
                android:id="@+id/guessed_letters"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:maxWidth="132dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

        <ImageView
            android:layout_height="160dp"
            android:layout_width="160dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/hangman6"
            android:id="@+id/gallow_image"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.4" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/user_input"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:id="@+id/game_word"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="0dp"
                android:id="@+id/input_field"
                android:layout_height="wrap_content"
                android:hint="@string/guess_hint"
                android:inputType="text"
                android:maxLength="1"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="20dp"
                android:layout_weight="0.55"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/guess_button"
                android:layout_weight="0.45"
                android:onClick="processGuess"
                android:id="@+id/guess_button"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
